# eureka-sink-rs

./: .gitignore  .gitmodules  Cargo.toml  README.com  README.md  dev.dockerfile  docker-compose.yml  rust-toolchain.toml
.github/workflows/: rust.yml
db/: Cargo.toml
db/src/: db_loader.rs  error.rs  lib.rs  operation.rs  sql_types.rs
devel/data/: .gitignore
eureka-sink-postgres/: Cargo.toml
eureka-sink-postgres/db/: Cargo.toml
eureka-sink-postgres/db/src/: cursor.rs  db_loader.rs  dsn.rs  error.rs  flush.rs  lib.rs  operation.rs  ops.rs  sql_types.rs
eureka-sink-postgres/sinker/: Cargo.toml
eureka-sink-postgres/sinker/src/: db_changes.rs  error.rs  lib.rs  stream_client.rs  tests.rs
eureka-sink-postgres/src/: db_changes.rs  error.rs  lib.rs
offchain/: .env.example  Cargo.toml  README.md  sqlx-data.json
offchain/src/: db_resolver_state.rs  lib.rs  resolver.rs  wasm_parser.rs
offchain/src/link_resolvers/: arweave.rs  https.rs  ipfs.rs  mod.rs
offchain/src/wasm/: host.rs  mod.rs  parser.rs
proto/eureka/ingest/v1/: records.proto
proto/sepana/ingest/v1/: ingest.proto  records.proto
src/: db_changes.rs  error.rs  lib.rs  stream_client.rs  tests.rs
src/pb/: sf.substreams.v1.rs
substreams/: README.md
substreams-sink/: .gitignore  Cargo.toml  README.md  build.rs
substreams-sink-rs/: Cargo.toml  README.md
substreams-sink-rs/src/pb/: sf.substreams.v1.rs
substreams-sink/proto/: buf.gen.yaml
substreams-sink/src/: lib.rs
substreams/eth-balance/: README.md
substreams/eth-balance/src/: lib.rs
substreams/eth-block-header/: Cargo.toml
substreams/eth-block-header/src/: lib.rs
tests/bootstrapping/eth-balance/: Cargo.toml  build.rs  substreams.yaml
tests/bootstrapping/eth-block-header/: README.md  build.rs  substreams.yaml
tests/bootstrapping/eth-block-header/src/: lib.rs
tests/bootstrapping/ingest/: Cargo.toml  build.rs
tests/bootstrapping/ingest/config/: config.template
tests/bootstrapping/ingest/src/: main.rs
tests/commitments/: Cargo.toml  README.md  build.rs  config.toml  rust-toolchain.toml  schema.sql  substreams.yaml
tests/commitments/src/: block_commit.rs  event_filtering.rs  lib.rs  p_adic_representations.rs
tests/dbloader/: Cargo.toml  Dockerfile  README.md
tests/dbloader/sql/: clean.sql  schema.sql
tests/dbloader/src/: lib.rs
