[package]
name = "eureka-sink-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
prost = { version = "0.10.1" }
prost-types = "0.10.1"
tonic = "0.7.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
thiserror = "^1.0.20"

[build-dependencies]
tonic-build = "0.7"
