[package]
name = "substreams-sink"
version = "0.1.0"
edition = "2021"
description = "Substreams Sink"

[dependencies]
prost = { version = "0.11.6" }
prost-types = "0.11.6"
tonic = { version = "0.8.3", features = ["gzip"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
git-download = "0.1"
tonic-build = "0.8.4"
