[package]
name = "eureka-sink-postgres"
version = "0.1.0"
edition = "2021"
description = "Substreams Postgres synchronization"

[dependencies]
bigdecimal = "0.3.0"
chrono = "0.4.23"
diesel = { version = "2.0.3", features = ["postgres"] }
dsn = "1.0.2"
pg_interval = "0.4.2"
thiserror = "1.0.38"
substreams-sink = { path = "../../substreams-sink" }