[package]
name = "eth_event_commitments"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
plonky2 = "0.1.3"
substreams-ethereum = "0.9.0"
substreams = "0.5.1"
hex-literal = "0.3.4"
prost = "0.11.6"
serde_json = "1.0"
ethereum-types = "0.14.1"

[dev-dependencies]
hex = "0.4.3"
sha256 = "1.1.2"

[build-dependencies]
prost-build = "0.11.6"

[workspace]

